# tinkoff-guess-game-helper

./: .gitignore  Cargo.toml  README.md
src/: main.rs  web.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: lib.rs  words.rs
ui/: index.html
