[package]
name = "tinkoff_guess_game_helper"
version = "0.1.1"
edition = "2021"


[[ bin ]]
name = "main"
path = "src/main.rs"

[ lib ]
name = "tinkoff_guess_game_lib"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }

lazy_static = "1.4.0"
rand = "0.8.5"
tracing = "0.1"
tracing-subscriber = "0.2.0"
